ecmascript/parser/tests/test262-error-references/fail/b23c154206fb45fa.module.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/b23c154206fb45fa.module.js:1:11
  |
1 | export {a,,b}
  |           ^

